--- a/PROJECT_I/recipe - home - styles.css
+++ b/PROJECT_I/recipe - home - styles.css
@@ -1,18 +1,25 @@
-/* Basic styling for the header */
-header {
-    background-color: #f2f2f2;
-    background-color: #f5f5f5;
-    padding: 20px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-/* Logo styles */
-.logo img {
-    width: 100px;
-}
-
+header{
+    background-color: peachpuff;
+    padding: 16px;
+    text-align: center;
+  }
+  #header-title {
+    font-size: 100px;
+    color: rgb(0, 0, 0);
+    font-weight: bold; 
+    text-align: left;
+  }
+ #image-container {
+    float: right;
+    width: 100px; 
+    margin-right: 20px;
+    margin-top: -120px
+  }
+  #image-container img {
+    width: 66px; 
+    height: auto;
+  }
+    
 /* Navigation menu styles */
 .menu {
     position: relative;
